Archive2/fb/e324d416e6f024/output
main.cpp: In constructor ‘Callback<R(Tn ...)>::Callback(std::function<_Res(_ArgTypes ...)>)’:
main.cpp:23:67: error: expected primary-expression before ‘(’ token
  Callback(std::function<R (Tn...)> f) : obj(null), func(f.target<R(Tn...)>()) {}
                                                                   ^
main.cpp:23:70: error: expected primary-expression before ‘...’ token
  Callback(std::function<R (Tn...)> f) : obj(null), func(f.target<R(Tn...)>()) {}
                                                                      ^
main.cpp:23:76: error: expected primary-expression before ‘)’ token
  Callback(std::function<R (Tn...)> f) : obj(null), func(f.target<R(Tn...)>()) {}
                                                                            ^
